# pheonx-core

./: .dockerignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md
.github/workflows/: libcabi-build-and-release.yml
c-abi-libp2p/: .gitignore  Cargo.toml
c-abi-libp2p/docs/: networking_overview.md
c-abi-libp2p/examples/cpp/: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  ping.cpp
c-abi-libp2p/examples/python/: Dockerfile  README.md  docker-compose.yml  ping_standalone_nodes.py  ping_two_nodes.py
c-abi-libp2p/src/: lib.rs
c-abi-libp2p/src/messaging/: mod.rs
c-abi-libp2p/src/peer/: discovery.rs  manager.rs  mod.rs
c-abi-libp2p/src/transport/: libp2p.rs  mod.rs
